[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/game/unit/unit.gd" type="Script" id=1]
[ext_resource path="res://src/game/unit/unit_default_sprite.atlastex" type="Texture" id=2]

[sub_resource type="Animation" id=2]
resource_local_to_scene = true
resource_name = "attack"
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:offset:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.299998, -9.92679, 0.1, 3.30895, -3.525, -0.25, 0, 0.25, 0, 6, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 0.7, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Sprite:offset:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0.0452407, 0.110031, -0.0199115, -1, -0.25, -0.151107, 0.184013, 0.111223, 0.1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 0.7, 1 )
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 2, -0.25, 0, 0.25, 0, 1.8, -0.25, 0, 0.25, 0, 1.8, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.6, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Sprite:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 2, -0.25, 0, 0.25, 0, 1.8, -0.25, 0, 0.25, 0, 1.8, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.6, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.249995, 5.025, 0.1, -2.01004, 12.0409, -0.1, -0.484516, 0.1, 0.484518, -10, -0.1, 0.237688, 0.1, -0.237688, 0, -0.1, -1.68703, 0.0999985, 1.68701 ),
"times": PoolRealArray( 0, 0.2, 0.7, 1 )
}

[sub_resource type="Animation" id=3]
resource_name = "walk"
length = 0.5
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:offset:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, -0.00239827, 0.1, 0.000959307, -0.716352, -0.2, -0.0652102, 0.2, 0.0652102, 0.870428, -0.1, -0.0434734, 0.1, 0.0434734, -0.825036, -0.100781, -0.110395, 0.0992188, 0.108684, 0, -0.1, -0.194671, 0.25, 0.486678 ),
"times": PoolRealArray( 0, 0.15, 0.3, 0.400391, 0.5 )
}

[node name="Unit" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
__meta__ = {
"_editor_description_": "Default display of the Unit"
}

[node name="LightOccluder2D" type="LightOccluder2D" parent="Sprite"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 2 )
anims/idle = SubResource( 4 )
anims/walk = SubResource( 3 )
__meta__ = {
"_editor_description_": "Simple Universal animations defined here."
}

[node name="Areas" type="Node2D" parent="."]

[node name="Body" type="Area2D" parent="Areas"]
collision_layer = 0
collision_mask = 0
__meta__ = {
"_editor_description_": "no LAYER and MASK by default, derived classes should set their layer&mask"
}

[node name="AggroRange" type="Area2D" parent="Areas"]

[node name="AttackRange" type="Area2D" parent="Areas"]

[node name="DecideTimer" type="Timer" parent="."]
one_shot = true

[node name="DEBUG" type="Control" parent="."]
margin_left = -21.0
margin_top = -57.0
margin_right = 19.0
margin_bottom = -17.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StateLabel" type="Label" parent="DEBUG"]
margin_top = 23.0
margin_right = 40.0
margin_bottom = 37.0
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
